abnormally long tags for addons are broken using word-wrap (bug 723871)

--- a/media/css/impala/addon_details.less
+++ b/media/css/impala/addon_details.less
@@ -430,6 +430,7 @@ h1.addon,
         display: inline;
         padding: 0 1px 0 0;
         line-height: 1.2em;
+        word-wrap: break-word;
     }
     li:not(:last-child):after {
         content: '\00B7';
